[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/server/ServerConnection.gd" type="Script" id=1]

[node name="ServerConnection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="ResultLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 576.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="ButtonGet" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Get"

[node name="ButtonPost" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Post"
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/ButtonGet" to="." method="_on_ButtonGet_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/ButtonPost" to="." method="_on_ButtonPost_pressed"]
